--- a/index.html
+++ b/index.html
@@ -2,15 +2,200 @@
 <html>
 
   <head>
-    <title>Code Copy #2</title>
+  	<style>
+  		header {
+    padding: 15px;
+    background-color: black;
+    margin: 0;
+    float: left;
+    width: 100%;
     
-    <!--Put your CSS inside this style tag-->
-    <style>
-    </style>
+    text-align: center;
+}
 
+nav {
+    text-align: center;
+    word-spacing: 60px;
+}
+
+nav li {
+    display: inline-block;
+    text-decoration: none;
+
+}
+
+nav li a {
+    text-decoration: none;
+    color: white;
+
+}
+
+.logo {
+    width: 20px;
+}
+.search{
+    width: 15px;
+}
+.bag {
+    width: 15px;
+}
+.iphone {
+    width: 100%;
+    object-fit: fill;
+    height: 500px;
+    float: right;
+}
+.madebyapple {
+    width: 25%;
+    height: 165px;
+}
+.ipad {
+    width: 25%;
+    height: 165px;
+}
+.airpods {
+    width: 25%;
+    height:165px;
+}
+.appletv {
+    width: 23.5%;
+    height: 165px;
+}
+div li {
+    color: gray;
+    text-decoration: none;
+    padding: auto;
+    line-height: 20px;
+    font-size:12px;
+    text-indent: 15%;
+    margin:0;
+    padding:0 0 0 15px;
+}
+h1, h2 {
+    padding: auto;
+    font-size: 12px;
+    text-indent: 15%;
+    color: dark gray;
+}
+.ul, li{
+margin:0;
+list-style: none; 
+
+}
+
+.bottom{
+    float: left;
+    margin: 0 20px 0 0;
+}
+  	</style>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <link rel="shortcut icon" href="img/favicon(1).ico"/>
   </head>
-  
   <body>
-  </body>
+     <header>
+               <title>Michael is butthurt by my success</title>
+         <nav>
+           <img class="logo" src="img/apple-logo.png" href="apple-logo">
+  <li><a href="default.asp">Mac</a></li>
+  <li><a href="news.asp">iPad</a></li>
+  <li><a href="contact.asp">iPhone</a></li>
+  <li><a href="about.asp">Watch</a></li>
+  <li><a href="tv.asp">TV</a></li>
+  <li><a href="music.asp">Music</a></li>
+  <li><a href="support.asp">Support</a></li>
+          <img class="search" src="img/search.png" href="search">
+          <img class="bag" src="img/bag.png" href="bag">
+</nav> 
+</header>
+<div>
+          <img class="iphone" src="img/iphone.jpg" href="iphone">
+          </div>
+      <div>
+      <img class="madebyapple" src="img/made_by_apple.jpg" href="made">
+            <img class="ipad" src="img/ipad_pro.jpg" href="ipad">
+                  <img class="airpods" src="img/airpods.jpg" href="airpods">
+                        <img class="appletv" src="img/apple_tv.jpg" href="appletv">
+      </div>
+      <div class="bottom">
+<h1>Shop and Learn</h1>
+    <ul>
+    <li>Mac</li>
+    <li>iPad</li>
+    <li>iPhone</li>
+    <li>Watch</li>
+    <li>TV</li>
+    <li>Music</li>
+    <li>iTunes</li>
+    <li>iPod</li>
+    <li>Accessories</li>
+    <li>Gift Cards</li>
+    </ul>
+</div>
+<div class="bottom">
+<ul>
+<h2>Apple Store</h2>
+    <li>Find a Store</li>
+    <li>Genius Bar</li>
+    <li> Workshop and Learning</li>
+    <li>Youth Program</li>
+    <li>Apple Store App</li>
+    <li>Refurbished and Clearance</li>
+    <li>Financing</li>
+    <li>Reuse and Recycle</li>
+    <li>Order Status</li>
+    <li>Shopping Help</li>
+    </ul>
+
+        </div>
+
+        <div class="bottom">
+<h1>For Education</h1>
+    <ul>
+    <li>Apple and Education</li>
+    <li>Shop for College</li>
+    <li><h1>For business</h1></li>
+    <li>Apple and Business</li>
+    <li>Shop for Business</li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    </ul>
+</div>
+        <div class="bottom">
+<h1>Account</h1>
+    <ul>
+    <li>Manage Your Apple ID</li>
+    <li>Apple Store Account</li>
+    <li>iCloud.com</li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    </ul>
+</div>
+        <div class="bottom">
+<h1>About Apple</h1>
+    <ul>
+    <li>Apple Info</li>
+    <li>Newsroom</li>
+    <li>Job Opportunities</li>
+    <li>Press Info</li>
+    <li>Investors</li>
+    <li>Events</li>
+    <li>Contact Apple</li>
+    <li></li>
+    <li></li>
+    <li></li>
+    </ul>
+</div>
+    </div>
+
+
+      </body>
   
-</html>
+</html>	
